<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"

    >

    <android.support.v7.widget.CardView
        android:layout_width="342dp"
        android:layout_height="426dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="329dp"
            android:layout_height="418dp"
            >


            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <EditText
                    android:id="@+id/field_label"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_field1"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/field_data"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_field2"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/field_amount"
                    android:layout_width="199dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_field3"
                    android:inputType="number" />

                <RadioGroup
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:id="@+id/radioGroupExpType"
                    >

                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="201dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_leasure"
                        android:text="@string/expenditure_group2" />

                    <RadioButton
                        android:id="@+id/radioButton7"
                        android:layout_width="201dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_travel"
                        android:text="@string/expenditure_group3" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_restaurant_menu_black_24dp"
                        android:text="@string/expenditure_group1" />

                    <RadioButton
                        android:id="@+id/radioButton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_culture"
                        android:text="@string/expenditure_group4" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/expenditure_group5" />

                </RadioGroup>

                <Button
                    android:id="@+id/buttonSubmitExpenditure"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/button_name"
                    android:textColor="@color/white" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>
</ScrollView>