<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"

    >

    <android.support.v7.widget.CardView
        android:layout_width="342dp"
        android:layout_height="426dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="329dp"
            android:layout_height="418dp"
            >


            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <EditText
                    android:id="@+id/field_labelIncome"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_field1"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/field_dataIncome"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_field2"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/field_amountIncome"
                    android:layout_width="199dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_field3"
                    android:inputType="number" />

                <RadioGroup
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:id="@+id/radioGroupIncomeType"
                    >


                    <RadioButton
                        android:id="@+id/radioButtonIncome1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Parents" />

                    <RadioButton
                        android:id="@+id/radioButtonIncome2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="Salary" />

                    <RadioButton
                        android:id="@+id/radioButtonIncome3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Other" />


                </RadioGroup>

                <Button
                    android:id="@+id/buttonSubmitIncome"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/button_income_name"
                    android:textColor="@color/white" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>
</ScrollView>